[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://themes/Baloo Black/fonts/Baloo2-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://backs/Brownz.png" type="Texture" id=4]
[ext_resource path="res://Track_L.tscn" type="PackedScene" id=5]
[ext_resource path="res://loops/intro.wav" type="AudioStream" id=6]
[ext_resource path="res://gravel.tres" type="TileSet" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
Track_L = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2( -100000, -100000 )
scroll_limit_end = Vector2( 100000, 100000 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 4 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 744, 344 )
z_index = 500

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Canvas"]
margin_left = 30.0
margin_top = 20.0
margin_right = 30.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Canvas/Control"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Text line 1
Text line 2"

[node name="intro" type="AudioStreamPlayer" parent="Canvas"]
stream = ExtResource( 6 )
autoplay = true

[node name="DrawTrack" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Statics" type="Node2D" parent="."]
position = Vector2( 680, 271 )

[node name="TileMap" type="TileMap" parent="Statics"]
tile_set = ExtResource( 7 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( -65537, 12, 0, -131072, 13, 0, -131071, 14, 0, -131070, 15, 0, -2, 3, 0, -1, 0, 0, -65536, 1, 0, -65535, 2, 0, -65534, 3, 0, -65533, 0, 0, 65534, 7, 0, 65535, 4, 0, 0, 5, 0, 1, 6, 0, 2, 7, 0, 3, 4, 0, 131070, 11, 0, 131071, 8, 0, 65536, 9, 0, 65537, 10, 0, 65538, 11, 0, 65539, 8, 0, 196606, 15, 0, 196607, 12, 0, 131072, 13, 0, 131073, 14, 0, 131074, 15, 0, 131075, 12, 0, 262143, 0, 0, 196608, 1, 0, 196609, 2, 0, 196610, 3, 0 )

[connection signal="set_draw_timer" from="Player" to="." method="_on_Player_set_draw_timer"]
[connection signal="set_hud" from="Player" to="." method="_on_Player_set_hud"]
[connection signal="timeout" from="DrawTrack" to="." method="_on_DrawTrack_timeout"]
